syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.iconsult.zeenebel.otpservice";
import "Common/constants.proto";

message VerifyOTPRequest {
  string mobile = 1;
  string otpCode = 2;
}

message VerifyOTPResponse {
 EmailOtp emailOtpResponse = 1;
}

service VerifyOtpService{
  rpc verifyOtp(VerifyOTPRequest) returns(VerifyOTPResponse);
}
